--- a/casadocodigo/views/produtos/lista.ejs
+++ b/casadocodigo/views/produtos/lista.ejs
@@ -1,12 +1,47 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Casa do Código</title>
-</head>
-<body>
-    <h1>Aqui Listaremos os Produtos</h1>
-</body>
-</html>
+<% include ../includes/header.ejs %>
+
+    <!-- FINAL NAV -->
+    <div>
+        <div class="container min-container">
+            <h2 class="basic-title">Listagem de livros</h2>
+            <div class="well">
+                <table class="table table-condensed table-bordered table-striped table-hover">
+                    <thead>
+                        <tr>
+                            <td>
+                                <a href="">Título</a>
+                            </td>
+                            <td>
+                                <a href="">Preço</a>
+                            </td>
+                            <td>
+                                <a href="">Descrição</a>
+                            </td>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <% livros.forEach( (livro) => { %>
+                            <tr>
+
+                                <td>
+                                    <%= livro.titulo %>
+                                </td>
+                                <td>
+                                    <%= livro.preco %>
+                                </td>
+                                <td>
+                                    <p>
+                                        <%= livro.descricao %>
+                                    </p>
+                                </td>
+
+                            </tr>
+                            <% }) %>
+                    </tbody>
+                </table>
+                <a href="/produtos/form" class="btn btn-success">
+                    <span class="glyphicon glyphicon-plus-sign"></span> Novo livro</a>
+            </div>
+        </div>
+    </div>
+    <% include ../includes/footer.ejs %>
